# PrivateRookie.github.io

./: .gitignore  404.html  Cargo.toml  _config.yml  aboutme.md  book.toml  booklist.md  feed.xml  index.html  index.md  post_edit.py  print.html  searchindex.js  searchindex.json  sitemap.xml  zine.toml  导言.html  文章.html  笔记.html
@privaterookie/: index.html
_includes/: gittalk.html  just_comments.html
_layouts/: page.html  post.html
_posts/: 2018-06-24-openstack创建虚拟机源码阅读.md  2018-06-27-Bottle-框架中装饰器类和描述符应用.md  2019-04-17-使用devpi搭建本地源.md  2019-04-20-Python展开嵌套序列.md  2019-04-20-pipenv-使用简介.md  2019-04-22-深度系统rust开发环境搭建.md  2019-05-01-miniserve-miniserve 简单美观的文件服务器.md  2019-05-05-magnum-stein-release-new-features.md  2019-05-12-rust-rc.md  2019-05-20-Python-Rust-迭代器类比.md  2019-06-28-搭建etcd服务发现服务.md  2019-07-03-OpenStack允许root用户使用ssh-key登录.md  2019-07-06-requirements.txt文件指定依赖.md  2019-07-10-我经常使用的Rust小crate.md  2019-07-14-Rust模块与文件.md  2019-07-18-Deepin安装Angular10+.md  2019-07-25-使用OSProfiler.md  2019-07-27-windows上使用vscode-remote.md  2019-08-04-使用rust-analyzer.md  2019-08-16-Python-package安装时安装额外文件.md  2019-08-31-Rust-命令行工具.md  2019-09-27-Fedora-CoreOS-尝鲜.md  2020-01-31-rust代码风格tips.md  2020-02-03-log4rs-Rust-log库.md  2020-02-29-impl-Trait-vs-dyn-Trait.md  2020-03-04-nom-cheatsheet.md  2020-03-09-gitlab-runner启动守护进程.md  2020-03-21-使用nom写parser.md  2020-05-10-使用nom写parser.md  2020-06-07-使用nom写parser.md  2020-06-25-Rust实现的日至收集工具.md  2020-07-19-typing+pyright-更正确的Python代码.md  2020-07-31-boxercrab发布.md  2020-08-16-使用nom写parser.md  2020-08-30-PowerShell配置.md  IPv6.md  (+1 more)
(+133 files in other folders)
