[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive", "env"] }
time = { version = "0.3.30", features = ["formatting", "parsing", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["time"] }

[dev-dependencies]
